--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>e-expense-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>e-expense-api</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Backend API for manage expense</description>
 	<properties>
 		<java.version>11</java.version>
 		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
@@ -207,7 +207,7 @@
 	<distributionManagement>
 		<repository>
 			<id>github</id>
-			<name>E-noticeBoard Simple CRUD application</name>
+			<name>Backend API for manage expense</name>
 			<url>https://maven.pkg.github.com/codeur47/e-expense-api</url>
 		</repository>
 	</distributionManagement>
