--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,9 @@
 		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 		<org.projectlombok.version>1.18.10</org.projectlombok.version>
 		<code.coverage.exclusions>
-			**/com/yorosoft/e-expense-api/dto/**,
+			**/com/yorosoft/e-expense-api/dto/CategoryDTO.java,
 			**/com/yorosoft/e-expense-api/model/**,
+			**/com/yorosoft/e-expense-api/model/Category.java,
 			**/com/yorosoft/e-expense-api/mapper/**,
 			**/com/yorosoft/e-expense-api/advice/**,
 			**/com/yorosoft/e-expense-api/controller/CrudController.java,
